<resources>
    <string name="app_name">spotychapisote</string>
    <string name="mis_canciones">Mis canciones</string>
    <string name="mood_del_dia">Mood del día</string>
    <string name="artista">Artista</string>
    <string name="titulo_cancion">Titulo Cancion</string>
    <string name="nombre_cancion">Nombre Cancion</string>
    <string name="search_hint">Search</string>
    <string name="last_played">Last Played</string>
    <string name="icono_buscar">Icono buscar</string>
    <string name="icono_ver_mas">Icono ver más</string>
    <string name="cover_art">Cover art</string>
    <string name="titulo_de_la_cancion">Titulo de la cancion</string>
    <string name="volver">Volver</string>
    <string name="escuchar">Escuchar</string>
    <string name="top_1">TOP 1</string>
    <string name="top_canciones">Top Canciones</string>
    <string name="top_artistas">Top Artistas</string>
    <string name="cancion">Cancion</string>
    <string name="agregar_cancion">Agregar Cancion</string>
    <string name="nombre_de_la_cancion">Nombre de la cancion</string>
    <string name="link">Link</string>
    <string name="guardar">Guardar</string>
    <string name="escribe_aqui">Escribe aqui</string>




</resources>