<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/addSongRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2F3B73">

    <ImageButton
        android:id="@+id/btnBackAdd"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/volver"
        android:src="@android:drawable/ic_media_previous"
        app:tint="#B3B3B3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textAddTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/agregar_cancion"
        android:fontFamily="@font/gotham"
        android:textColor="#F9FAFB"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardCoverPick"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="54dp"
        android:layout_marginEnd="54dp"
        android:layout_marginTop="26dp"
        app:cardCornerRadius="18dp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="#E5E7EB"
        app:layout_constraintTop_toBottomOf="@id/textAddTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintDimensionRatio="1:1">

        <ImageView
            android:id="@+id/imageCoverPick"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/image_default"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/labelNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="22dp"
        android:text="@string/nombre_de_la_cancion"
        android:fontFamily="@font/gotham"
        android:textColor="#F9FAFB"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/cardCoverPick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardInputNombre"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="18dp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="#1F2A4A"
        app:layout_constraintTop_toBottomOf="@id/labelNombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/inputNombreCancion"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:background="@android:color/transparent"
            android:hint="@string/escribe_aqui"
            android:inputType="text"
            android:textColor="#F9FAFB"
            android:textColorHint="#9CA3AF"
            android:maxLines="1"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/labelArtista"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="14dp"
        android:text="@string/artista"
        android:fontFamily="@font/gotham"
        android:textColor="#F9FAFB"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/cardInputNombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardInputArtista"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="18dp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="#1F2A4A"
        app:layout_constraintTop_toBottomOf="@id/labelArtista"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/inputArtista"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:background="@android:color/transparent"
            android:hint="@string/escribe_aqui"
            android:inputType="text"
            android:textColor="#F9FAFB"
            android:textColorHint="#9CA3AF"
            android:maxLines="1"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/labelLink"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="14dp"
        android:text="@string/link"
        android:fontFamily="@font/gotham"
        android:textColor="#F9FAFB"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/cardInputArtista"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardInputLink"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="18dp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="#1F2A4A"
        app:layout_constraintTop_toBottomOf="@id/labelLink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/inputLink"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:background="@android:color/transparent"
            android:hint="@string/escribe_aqui"
            android:inputType="textUri"
            android:textColor="#F9FAFB"
            android:textColorHint="#9CA3AF"
            android:maxLines="1"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardGuardar"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginStart="88dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="34dp"
        app:cardCornerRadius="18dp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="#36457D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:text="@string/guardar"
            android:fontFamily="@font/gotham"
            android:textAllCaps="false"
            android:textColor="#F9FAFB"
            android:textStyle="bold"
            android:textSize="20sp"/>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
